Multi-Agence + Client compatible ( Comparateur fonctionnel nativement )

--- a/agency-server/src/main/resources/application.properties
+++ b/agency-server/src/main/resources/application.properties
@@ -3,6 +3,12 @@
 # TCP Server
 agency.tcp.port=7070
 
+# Discount rate (0.10 = 10% discount)
+agency.discount.rate=0.10
+
+# Agency name
+agency.name=MegaAgence
+
 # Use REST instead of SOAP for hotel communication
 agency.use.rest=true
 
